[gd_scene load_steps=16 format=3 uid="uid://dxfh5ajsniglu"]

[ext_resource type="PackedScene" uid="uid://b7bgqo06tbp74" path="res://Scene/player.tscn" id="1_f6udf"]
[ext_resource type="Script" uid="uid://c6prkhg3thoqu" path="res://Script/main.gd" id="1_sblpm"]
[ext_resource type="PackedScene" uid="uid://kef7rac83cxo" path="res://Scene/mob.tscn" id="2_r34rm"]
[ext_resource type="PackedScene" uid="uid://dl70jthut2moc" path="res://Scene/tree.tscn" id="4_2wwxx"]
[ext_resource type="PackedScene" uid="uid://cuiovgdevlwji" path="res://Scene/stone.tscn" id="4_3amdw"]
[ext_resource type="FontFile" uid="uid://cyxhh7ddkn62q" path="res://fonts/Montserrat-Medium.ttf" id="6_1xcnr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rlixt"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_f6udf"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sblpm"]
albedo_color = Color(0.378598, 0.237632, 0.379417, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_r34rm"]
material = SubResource("StandardMaterial3D_sblpm")

[sub_resource type="Curve3D" id="Curve3D_2wwxx"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -16.0468, 0, -16.0218, 0, 0, 0, 0, 0, 0, -15.9889, 0, 15.9792, 0, 0, 0, 0, 0, 0, 16.0014, 0, 15.9724, 0, 0, 0, 0, 0, 0, 15.988, 0, -15.9765),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[sub_resource type="FastNoiseLite" id="FastNoiseLite_2wwxx"]
noise_type = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_3amdw"]
seamless = true
as_normal_map = true
bump_strength = 9.3
noise = SubResource("FastNoiseLite_2wwxx")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1xcnr"]
depth_draw_mode = 1
albedo_color = Color(0.249991, 0.48672, 0.781285, 1)
roughness = 0.17
roughness_texture_channel = 1
normal_enabled = true
normal_scale = 0.0
normal_texture = SubResource("NoiseTexture2D_3amdw")

[sub_resource type="PlaneMesh" id="PlaneMesh_ow1sv"]
material = SubResource("StandardMaterial3D_1xcnr")
size = Vector2(60, 60)

[node name="Main" type="Node"]
script = ExtResource("1_sblpm")
mob_scene = ExtResource("2_r34rm")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_rlixt")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_f6udf")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0645999, 24, -0.425733)
light_energy = 7.0
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_f6udf")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1.13937, 0, 0, 0, 1.13937, 0, 0, 0, 1.13937, 0, 0, 19)
projection = 1
size = 19.0

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 5, 16)
mesh = SubResource("CylinderMesh_r34rm")

[node name="MeshInstance2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, -16)
mesh = SubResource("CylinderMesh_r34rm")

[node name="MeshInstance3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, 16)
mesh = SubResource("CylinderMesh_r34rm")

[node name="MeshInstance4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, -16)
mesh = SubResource("CylinderMesh_r34rm")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_2wwxx")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.999998, 0, -0.00180927, 0, 1, 0, 0.00180927, 0, -0.999998, -16.0468, 0, -16.0218)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Stone" parent="." instance=ExtResource("4_3amdw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.90801, 0, -3.93696)

[node name="Tree" parent="." instance=ExtResource("4_2wwxx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 3)

[node name="Tree2" parent="." instance=ExtResource("4_2wwxx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.99539, 0, -9.14902)

[node name="Tree3" parent="." instance=ExtResource("4_2wwxx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.26809, 0, 13.593)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_ow1sv")

[node name="Stone2" parent="." instance=ExtResource("4_3amdw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.74615, 0, -4.59113)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Name" type="Label" parent="CanvasLayer"]
offset_left = 6.0
offset_top = 5.0
offset_right = 113.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("6_1xcnr")
theme_override_font_sizes/font_size = 15
text = "Konkanok Pruttipan
653380187-0"

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 624.0
offset_top = 9.0
offset_right = 711.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 23
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.173424, 0, 0)
gizmo_extents = 0.0

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
